tests/invalid/mostly_uniq2.err_exp
mostly_uniq2.m:009: In [38;5;87m`foo'(di, uo):[39;49m
mostly_uniq2.m:009:   error: [38;5;203m`multi'[39;49m is not a valid determinism for a predicate
mostly_uniq2.m:009:   that has I/O state arguments. The valid determinisms for
mostly_uniq2.m:009:   such predicates are [38;5;40m`det',[39;49m [38;5;40m`cc_multi'[39;49m and [38;5;40m`erroneous',[39;49m
mostly_uniq2.m:009:   since the I/O state can be neither duplicated nor
mostly_uniq2.m:009:   destroyed.
mostly_uniq2.m:017: In clause for `foo(di, uo)':
mostly_uniq2.m:017:   in argument 2 of call to predicate `io.write_int'/3:
mostly_uniq2.m:017:   mode error: [38;5;87mvariable `STATE_VARIABLE_IO_0'[39;49m has
mostly_uniq2.m:017:   instantiatedness [38;5;203m`mostly_unique',[39;49m
mostly_uniq2.m:017:   expected instantiatedness was [38;5;40m`unique'.[39;49m
mostly_uniq2.m:017:   [38;5;226mThis kind of uniqueness mismatch is usually caused by[39;49m
mostly_uniq2.m:017:   [38;5;226mdoing input/output or some other kind of destructive[39;49m
mostly_uniq2.m:017:   [38;5;226mupdate in a context where it can be backtracked over,[39;49m
mostly_uniq2.m:017:   [38;5;226msuch as the condition of an if-then-else.[39;49m
